# agent-adapter

./: .gitignore  CLAUDE.md  README.md  codex-adapter.service  config.example.yaml  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  release.md  ssot-registry.md
scripts/: bump_version.py
src/codex_adapter/: __init__.py  cli.py  codex_setup.py  config.py  litellm_client.py  logging_utils.py  proxy.py  translator.py
src/codex_adapter/deploy/: __init__.py  configurator.py  installer.py  service_manager.py  systemd.py
src/codex_adapter/presets/: deepseek.yaml
src/common/: __init__.py  logging.py  runtime_paths.py
src/entrypoints/: __init__.py  responses_proxy.py
src/protocols/: __init__.py  codex_model_catalog.py  responses_chat.py
src/providers/: __init__.py  catalog.py  litellm_client.py
src/providers/presets/: __init__.py  deepseek.yaml
tests/: test_bump_version.py  test_config.py  test_configurator.py  test_litellm_client.py  test_logging_utils.py  test_proxy.py  test_service_manager.py  test_translator.py
