[project]
name = "codex-adapter"
version = "0.1.0"
description = "Adapt OpenAI Codex CLI to work with DeepSeek and other models via Responses API translation proxy"
readme = "README.md"
authors = [
    { name = "jidongpeng", email = "jidongpeng@tencent.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "starlette>=0.40",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
codex-adapter = "codex_adapter.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
