[project]
name = "codex-adapter"
version = "0.1.0"
description = "Adapt OpenAI Codex CLI to work with DeepSeek and other models via Responses API translation proxy"
readme = "README.md"
authors = [
    { name = "jidongpeng", email = "jidongpeng@tencent.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click==8.1.8",
    "httpx==0.28.1",
    "litellm==1.83.13",
    "loguru>=0.7.3",
    "pyyaml==6.0.3",
    "rich==13.9.4",
    "starlette==0.50.0",
    "uvicorn[standard]==0.33.0",
]

[project.scripts]
codex-adapter = "codex_adapter.cli:main"

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"
